Account for margin after when laying out <legend> element https://bugs.webkit.org/show_bug.cgi?id=35981

Reviewed by Abhishek Arya.

Source/WebCore:

Tests: fast/forms/legend-after-margin-horizontal-writing-mode.html
       fast/forms/legend-after-margin-vertical-writing-mode.html
       fast/forms/legend-after-margin-with-before-border-horizontal-mode.html
       fast/forms/legend-small-after-margin-before-border-horizontal-mode.html

The existing code would ignore margin after when layouting out the <legend>. This
change only adds the code to handle the margin after, the margin before is still
ignored as it's not obvious how it should be working.

* rendering/RenderFieldset.cpp:
(WebCore::RenderFieldset::layoutSpecialExcludedChild):
Split the code in 2 code paths to reflect how we position and size. Those are covered by the
tests above.

LayoutTests:

* fast/forms/legend-after-margin-horizontal-writing-mode-expected.html: Added.
* fast/forms/legend-after-margin-horizontal-writing-mode.html: Added.
* fast/forms/legend-after-margin-vertical-writing-mode-expected.html: Added.
* fast/forms/legend-after-margin-vertical-writing-mode.html: Added.
* fast/forms/legend-after-margin-with-before-border-horizontal-mode-expected.html: Added.
* fast/forms/legend-after-margin-with-before-border-horizontal-mode.html: Added.
* fast/forms/legend-small-after-margin-before-border-horizontal-mode-expected.html: Added.
* fast/forms/legend-small-after-margin-before-border-horizontal-mode.html: Added.


Canonical link: https://commits.webkit.org/106650@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120017 268f45cc-cd09-0410-ab3c-d52691b4dbfc